K8s/deployment.yml
---
  kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: aureliacomponentgallery
    namespace: dolittle
  spec:
    template:
      metadata:
        labels:
          app: aureliacomponentgallery
          name: aureliacomponentgallery
      spec:
        containers:
        - name: aureliacomponentgallery
          image: dolittle/components.aurelia.gallery
          imagePullPolicy: Always
          ports:
          - containerPort: 80
