K8s/service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: aureliacomponentgallery
    namespace: dolittle
    labels:
      app: aureliacomponentgallery
  spec:
    ports:
    - port: 80
      targetPort: 80
      name: aureliacomponentgallery-port
      protocol: TCP
    selector:
      app: aureliacomponentgallery
      name: aureliacomponentgallery
